@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-09T16:10:13Z",
-  "count_outdated" : 1377,
-  "uniques_outdated" : 332,
+  "timestamp" : "2023-08-10T08:09:28Z",
+  "count_outdated" : 1379,
+  "uniques_outdated" : 333,
   "count" : 1461,
   "uniques" : 343,
   "views" : [
-    {
-      "timestamp": "2023-07-27T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-29T00:00:00Z",
       "count": 8,
