@@ -1,12 +1,7 @@
 {
-  "count": 84,
-  "uniques": 11,
+  "count": 82,
+  "uniques": 10,
   "views": [
-    {
-      "timestamp": "2023-07-27T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-29T00:00:00Z",
       "count": 8,
