@@ -1,3 +1,12 @@
+2023-08-10T08:09:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5818581276 # 1804
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-10
+* notice: last 14d: unq all: 10 82
+* notice: prev accum: outdated-unq outdated-all / unq all: 332 1377 / 343 1461
+* notice: next accum: outdated-unq outdated-all / unq all: 333 1379 / 343 1461
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-27] / []
+
 2023-08-09T16:10:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5811467006 # 1802
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-09
